# shyt

./: pyproject.toml  shell.nix
.github/workflows/: release.yml
shyt/: sh.py
