[project]
name = "shyt"
version = "0.1.0"
description = "Shell-like program for downloading YouTube content using the InnerTune API."
authors = [
    {name = "Simone Gentili",email = "gensimone.git@gmail.com"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
