[project]
name = "shyt"
version = "0.1.0"
description = "Shell-like program for downloading YouTube content using the InnerTune API."
authors = [
    {name = "Simone Gentili",email = "gensimone.git@gmail.com"}
]
license = "GNU General Public License v3 (GPLv3)"
license-files = [ "LICENSE" ]
readme = "README"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
